# err

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
anomaly_detection/: model.py
camera_feed/: README.md  camera_feed.py  camera_receiver.py  camera_transmitter.py
factory-sim/: README.md  factory_simulator.py  handle.py
factory_sim/: factory_simulator.py  handle.py
fraud_detection/: predictor.py
industrial_predictor/: predictor.py
industry_processing/: README.md  classifier.py  hackathon.ipynb
templates/: base.html  camera.html  fraud.html  index.html  industrial.html  rl.html
