[project]
name = "err"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "jinja2",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.37.0",
    "xgboost>=3.0.5",
]
